--- a/views/stories/index.hbs
+++ b/views/stories/index.hbs
@@ -1,1 +1,23 @@
 <h1>Stories</h1>
+<div class="row">
+    {{#each stories}}
+        <div class="col s12 m4">
+            <div class="card">
+                <div class="card-image">
+
+                </div>
+                <div class="card-content center-align">
+                    <h5>
+                        {{title}}
+                    </h5>
+                    <p>
+                        {{body}}
+                    </p>
+                    <br>
+                </div>
+            </div>
+        </div>
+    {{else}}
+        <p>No stories to display</p>
+    {{/each}}
+</div>
