--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -30,7 +30,7 @@
 
                     </td>
                 </tr>
-            {{#/each}}
+            {{/each}}
         </tbody>
     </table>
 
