--- a/views/stories/index.hbs
+++ b/views/stories/index.hbs
@@ -1,5 +1,5 @@
 <h1>Stories</h1>
-<ul class="search-form">
+{{!-- <ul class="search-form">
     <li>    
         <form id="search-site"  action='/stories/search/:query' method='get'>
             <div class="input-group">
@@ -14,7 +14,7 @@
 
         </form>  
     </li>   
-</ul>
+</ul> --}}
 <div class="row">
     {{#each stories}}
     <div class="col s12 m4">
