--- a/views/awards.hbs
+++ b/views/awards.hbs
@@ -19,9 +19,10 @@
             padding: 20px;
         }
 
-        h1 {
+        h3 {
             text-align: center;
             color: #333;
+            margin-bottom: 20px; /* Optional: Adds spacing below the title */
         }
 
         .awards-list {
@@ -69,7 +70,7 @@
 </head>
 <body>
     <div class="awards-container">
-        <h1>Awards and Competitions</h1>
+        <h3>Awards and Competitions</h3>
         
         {{#if awards.length}}
             <div class="awards-list">
