--- a/views/stories/add.hbs
+++ b/views/stories/add.hbs
@@ -1,33 +1,37 @@
-<h1>Add Story</h1>
 <div class="row">
-  <form action="/stories" method="POST" class="col s12">
+  <form action="/stories" method="POST" class="col s12" id="storyForm">
     <div class="row">
-        <div class="input-field">
-            <input type="text" id="title" name="title">
-            <label for="title">Title</label>
-        </div>
+      <div class="input-field">
+        <input type="text" id="title" name="title">
+        <label for="title">Title</label>
+      </div>
     </div>
 
     <div class="row">
-        <div class="input-field">
-            <select id="status" name="status">
-                <option value="public" selected>Public</option>
-                <option value="private">Private</option>
-            </select>
-            <label for="status">Status</label>
-        </div>
+      <div class="input-field">
+        <select id="status" name="status">
+          <option value="public" selected>Public</option>
+          <option value="private">Private</option>
+        </select>
+        <label for="status">Status</label>
+      </div>
     </div>
 
     <div class="row">
-        <div class="input-field">
-            <h5>Tell Us Your Story:</h5>
-            <textarea id="body" name="body"></textarea>
-        </div>
+      <div class="input-field">
+        <h5>Tell Us Your Story:</h5>
+        <textarea id="body" name="body"></textarea>
+        <div id="sentimentResult" style="margin-top: 10px; font-weight: bold;"></div>
+      </div>
     </div>
 
     <div class="row">
-        <input type="submit" value="Save" class="btn">
-        <a href="/dashboard" class="btn orange">Cancel</a>
+      <input type="submit" value="Save" class="btn">
+      <a href="/dashboard" class="btn orange">Cancel</a>
     </div>
   </form>
 </div>
+
+
+<!-- External JavaScript file -->
+<script src="/js/script.js"></script>
