--- a/views/awards.hbs
+++ b/views/awards.hbs
@@ -22,7 +22,7 @@
         h3 {
             text-align: center;
             color: #333;
-            margin-bottom: 20px; /* Optional: Adds spacing below the title */
+            margin-bottom: 20px;
         }
 
         .awards-list {
