--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -10,11 +10,11 @@
         <title>StoryBooks</title>
     </head>
     <body>
-        {{> _header}} <!-- Include the navigation/header partial -->
-        {{> _add_btn}} <!-- Include the add button partial -->
+        {{> _header}}
+        {{> _add_btn}}
         
         <div class="container">
-            {{{body}}} <!-- This is where page content like awards will be rendered -->
+            {{{body}}}
         </div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
