--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -9,6 +9,7 @@
                 <th>Title</th>
                 <th>Date</th>
                 <th>Status</th>
+                <th>Genre</th>
                 <th></th>
             </tr>
         </thead>
@@ -25,6 +26,9 @@
                         <span class="dash-status">
                             {{status}}
                         </span>
+                    </td>
+                    <td>
+                        <span>{{genre}}</span>
                     </td>
                     <td>
                         <a href="/stories/edit/{{_id}}" class="btn btn-float">
