--- a/views/stories/add.hbs
+++ b/views/stories/add.hbs
@@ -2,7 +2,7 @@
   <form action="/stories" method="POST" class="col s12" id="storyForm">
     <div class="row">
       <div class="input-field">
-        <input type="text" id="title" name="title">
+        <input type="text" id="title" name="title" required>
         <label for="title">Title</label>
       </div>
     </div>
@@ -18,12 +18,15 @@
     </div>
 
     <div class="row">
-      <div class="input-field">
-        <h5>Tell Us Your Story:</h5>
-        <textarea id="body" name="body"></textarea>
-        <div id="sentimentResult" style="margin-top: 10px; font-weight: bold;"></div>
-      </div>
+        <div class="input-field">
+            <h5>Tell Us Your Story:</h5>
+            <textarea id="body" name="body" required></textarea>
+            <div id="genre" style="margin-top: 10px; font-weight: bold;"></div>
+        </div>
     </div>
+
+    <!-- Hidden input for the genre -->
+    <input type="hidden" name="genre" id="genreInput">
 
     <div class="row">
       <input type="submit" value="Save" class="btn">
