--- a/views/stories/add.hbs
+++ b/views/stories/add.hbs
@@ -25,8 +25,13 @@
         </div>
     </div>
 
-    <!-- Hidden input for the genre -->
     <input type="hidden" name="genre" id="genreInput">
+
+    <div class="row">
+      <button type="button" id="suggestionBtn" class="btn">Get Suggestions</button>
+    </div>
+
+    <div id="suggestionsDiv" style="margin-top: 20px; font-weight: bold;"></div>
 
     <div class="row">
       <input type="submit" value="Save" class="btn">
