--- a/views/stories/add.hbs
+++ b/views/stories/add.hbs
@@ -31,7 +31,7 @@
       <button type="button" id="suggestionBtn" class="btn">Get Suggestions</button>
     </div>
 
-    <div id="suggestionsDiv" style="margin-top: 20px; font-weight: bold;"></div>
+    <div id="suggestionsDiv" style="margin-top: 20px;"></div>
 
     <div class="row">
       <input type="submit" value="Save" class="btn">
